--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>暁Records</title>
+        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     </head>    
     <body>
-        text <br>
-        test whatever
+            
     </body>
-</html>
+    <footer>
+
+    </footer>
+</html>     
