--- a/index.html
+++ b/index.html
@@ -4,13 +4,100 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>暁Records</title>
-        <link href="style.css" rel="stylesheet" type="text/css" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+        <link href="css/normalize.css" rel="stylesheet" type="text/css">
+        <link href="css/nav.css" rel="stylesheet" type="text/css">
+        <link href="css/main.css" rel="stylesheet" type="text/css">
     </head>    
     <body>
-            
-    </body>
+    <nav>
+        <ul class="navbar">
+            <li><a class="img"> <img src="images/Akatsuki_top_big.jpg" alt="akatsuki logo"></a></li>
+            <li><a class="text" href="about.html">About</a></li>
+            <li><a class="text" href="discography.html">Discography</a></li>
+            <li><a class="text" href="videos.html">Videos</a></li>
+            <li><a class="text" href="works.html">Works</a></li>
+            <li><a class="text" href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <main>  
+    <section class="left">
+        <div class="title"> 
+            <div class="box"> </div>
+            <h1> Home </h1>
+        </div>
+        <div class="line"></div>
+        <div id="info">
+            <div id="youtube">
+                <button class="ch_logo" onclick="https//youtube.com/watch?v=dQw4w9WgXcQ">
+                    <img src="images/akatsuki_logo.jpg" alt="akatsuki channel logo">
+                </button>
+                <div class="desc">
+                    <h1>暁Records</h1> 
+                    <p>@Akatsuki-Records •  176K subscribers</p>
+                    <p>Akatsuki Records is a doujin circle formed in 2012 that focuses on arrangements of the Touhou Project series.</p>
+                  </div>
+            </div>
+            <div class="news">
+                <div class="title"> 
+                    <div class="box"> </div>
+                    <h1> Information </h1>
+                </div>
+                <select id="filter">
+                    <option value="all">All Items</option>
+                    <option value="albums">Albums</option>
+                    <option value="singles">Singles</option>
+                    <option value="cds">CDs</option>
+                    <option value="announcements">Announcements</option>
+                  </select>
+                <div class="item_list" id="item_list">
+                </div>
+                <script src="js/filter.js"></script>
+            </div>
+        </div>
+    </section> 
+    <section class="right"> 
+        <div class="header">
+            <img src="images/header_LetsGhost.jpg" alt="lets ghost banner">
+        </div>
+        <div>
+            <div class="title"> 
+                <div class="box"> </div>
+                <h1> Lastest Video </h1>
+            </div>
+            <div class="video">
+            <iframe id="Iframe" width="600" height="400" src="https://www.youtube.com/embed/adcvsXt8Bhg?si=xkg_CarPGv2NJQcR" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>  
+            More → <a href="https://www.youtube.com/@Akatsuki-Records"> 暁Records</a>
+        </div>
+        <div>
+            <div class="title"> 
+                <div class="box"> </div>
+                <h1> Shop </h1>
+            </div>
+            <div class="shop">
+                <div>
+                <img src="images/tora_bn.png" alt="tora">
+                </div>
+                <div>
+                <img src="images/meron_banner.png" alt="melonbooks">
+                </div>
+                <div>
+                <img src="images/bn_ookoku.png" alt="kipaookoku">
+                </div>
+                <div>
+                <img src="images/logo_s.png" alt="akibahobby">
+                </div>
+                <div>
+                <img src="images/Grepbannar.png" alt="grep">
+                </div>
+            </div>
+        </div>
+    </section>
+    </main>
     <footer>
-
+        <div class="footer">
+            Copyright (C) 2023 暁Records. All Rights Reserved.
+        </div>
     </footer>
+    </body>
 </html>     
