--- a/discography.html
+++ b/discography.html
@@ -25,7 +25,7 @@
             <h1> Discography </h1>
         </div>
         <div class="line"></div> 
-        <div id="filter">
+        <div id="filter"> <!-- filters and stuff -->
             <label> Year:</label>
             <select id="yearFilter">
                 <option value="all">All</option>
@@ -45,8 +45,8 @@
           <div id="list">
 
           </div>
-          <script src="js/year.js"></script>
     </main>
+    <script src="js/year.js"></script>
     <footer>
         <div class="footer">
             Copyright (C) 2023 暁Records. All Rights Reserved.
