--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
                     <option value="cds">CDs</option>
                     <option value="announcements">Announcements</option>
                   </select>
-                <div class="item_list" id="item_list">
+                <div class="item_list" id="item_list"> <!-- list willed be filled out by filter.js -->
                 </div>
-                <script src="js/filter.js"></script>
             </div>
         </div>
     </section> 
@@ -74,7 +73,7 @@
                 <div class="box"> </div>
                 <h1> Shop </h1>
             </div>
-            <div class="shop">
+            <div class="shop"> <!-- shop, not linked though -->
                 <div>
                 <img src="images/tora_bn.png" alt="tora">
                 </div>
@@ -94,6 +93,7 @@
         </div>
     </section>
     </main>
+    <script src="js/filter.js"></script>
     <footer>
         <div class="footer">
             Copyright (C) 2023 暁Records. All Rights Reserved.
